[project]
name = "msys2-autobuild"
version = "0.1.0"
description = ""
license = "MIT"
authors = [
  { name = "Christoph Reiter", email = "reiter.christoph@gmail.com" }
]
requires-python = ">=3.12.0,<4.0"
dependencies = [
  "PyGithub>=2.8.1,<3",
  "tabulate>=0.9.0,<0.10",
  "requests>=2.28.1,<3",
  "requests-cache>=1.0.0,<2",
  "urllib3>=2.2.1,<3",
]

[project.scripts]
msys2-autobuild = "msys2_autobuild.main:run"

[dependency-groups]
dev = [
  "pytest>=8.0.0,<9",
  "mypy==1.18.1",
  "flake8>=7.0.0,<8",
  "types-tabulate>=0.9.0.0,<0.10",
  "types-requests>=2.25.0,<3",
]

[build-system]
requires = ["poetry-core>=2.2.0"]
build-backend = "poetry.core.masonry.api"
