[project]
name = "msys2-autobuild"
version = "0.1.0"
description = ""
license = "MIT"
authors = [
  { name = "Christoph Reiter", email = "reiter.christoph@gmail.com" }
]
requires-python = ">=3.12.0,<4.0"
dependencies = [
  "PyGithub>=2.8.1,<3",
  "tabulate>=0.10.0,<0.11",
  "requests>=2.28.1,<3",
  "requests-cache>=1.0.0,<2",
  "urllib3>=2.2.1,<3",
  "cryptography==46.0.3",
  "gha-artifact-client>=0.2.0",
]

[project.scripts]
msys2-autobuild = "msys2_autobuild.main:run"

[tool.uv]
exclude-newer = "4 days"

[tool.uv.build-backend]
module-root = ""

[tool.ty.environment]
python-version = "3.12"

[dependency-groups]
dev = [
  "pytest>=8.0.0,<10",
  "ruff>=0.15.0,<0.16.0",
  "types-tabulate>=0.10.0.0,<0.11",
  "types-requests>=2.25.0,<3",
  "ty>=0.0.29",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 110
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F"]
